task-2/manifests/06-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-watcher
  namespace: task-2
  labels:
    app: task-2-api-watcher
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task-2-api-watcher
  template:
    metadata:
      labels:
        app: task-2-api-watcher
        dns: "true"
    spec:
      serviceAccountName: task-2-api-watcher
      containers:
        - name: endpoint-watcher
          image: curlimages/curl:8.12.1
          command:
            - sh
            - -c
            - |
              while true; do
                curl -sS --cacert /var/run/secrets/kubernetes.io/serviceaccount/ca.crt \
                  -H "Authorization: Bearer $(cat /var/run/secrets/kubernetes.io/serviceaccount/token)" \
                  https://kubernetes.default.svc/api/v1/namespaces/default/endpoints
                sleep 10
              done
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
