task-2/manifests/02-networkpolicy-default-deny-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny-egress
  namespace: task-2
spec:
  podSelector: {}
  policyTypes:
    - Egress
