task-2/manifests/04-networkpolicy-allow-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-kube-apiserver
  namespace: task-2
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
  - ports:
    - port: 16443
      protocol: TCP
